# vexcode

./: .gitignore  README.md  generated.py  pyproject.toml
.github/workflows/: main.yml
scripts/: coral-reef.vrblocks
src/: generate_points.py  vexcode.py
web/: index.html  style.css
